Trocando Checkbox por Radio no titulo.

--- a/formulario03.html
+++ b/formulario03.html
@@ -59,7 +59,7 @@
 
     <h3>Radio</h3>
 
-    <h3>Checkbox com seleção de apenas um item</h3>
+    <h3>Radio com seleção de apenas um item</h3>
 
     <label>Escolha um dia da semana.</label>
     <br>
