--- a/css-01-intro.html
+++ b/css-01-intro.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- External style sheet (folha de estilo externa) -->
+  <link rel="stylesheet" href="static/css/styles.css">
 
   <title>CSS</title>
 
   <!-- Internal style sheet (folha de estilo interna) -->
-
+  <style>
+    /*p {
+      color: red;
+    }*/
+  </style>
 
 </head>
 <body>
@@ -17,6 +22,9 @@
   <a href="https://www.maujor.com" target="_blank">https://www.maujor.com</a>
 
   <!-- Inline style (estilo em linha) -->
+  <!-- <p style="color: red;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptas unde quia saepe dignissimos, doloremque tempore, quidem recusandae, temporibus, mollitia nesciunt. Dolorum autem praesentium eveniet nostrum minus voluptates repudiandae, accusantium.</p> -->
+
+  <p style="color: green">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptas unde quia saepe dignissimos, doloremque tempore, quidem recusandae, temporibus, mollitia nesciunt. Dolorum autem praesentium eveniet nostrum minus voluptates repudiandae, accusantium.</p>
 
 </body>
 </html>
