--- a/css-06-bordas.html
+++ b/css-06-bordas.html
@@ -58,7 +58,7 @@
       width: 100px;
       height: 100px;
       border: 3px solid #000;
-      border-radius: 50px;
+      border-radius: 50%;
     }
   </style>
 
